# tempest_ai

./: .deny.toml  .gitattributes  .gitignore  .tempest_atlas.md  AGENTS.md  Cargo.toml  KNOWLEDGE_GRAPH.md  LICENSE  MANUAL.md  README.md  battle_ready_config.yaml  build.rs  config.toml  convert_dataset.py  flake.nix  fleet_telemetry  history.json  package-lock.json  pi.py  pi_result.txt  restore_dataset.py  shell.nix  speed_test  system_report.sh  tempest.sh  tempest_config.yaml  test.json  test_brace_counting_full  test_brace_counting_full.rs  test_extract.rs  test_regex.rs  text_substitutor.py
.cargo/: config.toml
.github/workflows/: release.yml
benches/: tool_performance.rs
docs/: agent_reliability.md
scratch/: check_mistralrs.rs  inject_help.py  prune_history.py  prune_loops.py
skills/: README.md  api_server.md  architecture_mapper.md  bash_automation.md  cron_scheduler.md  debug_rust.md  dns_setup.md  docker_deploy.md  git_workflow.md  launchd_service.md  migration_master.md  network_scanner.md  python_script.md  rust_project_setup.md  security_auditor.md  server_hardening.md  system_diagnostics.md  systemd_service.md  task_complete.md  test_scaffolder.md  unit_testing.md  web_scraper.md
src/: actors.rs  agent.rs  ai_bridge.rs  checkpoint.rs  context_manager.rs  crypto.rs  daemon.rs  effects.rs  error.rs  error_classifier.rs  hardware.rs  history.json  inference.rs  lib.rs  main.rs  mcp.rs  mcp_protocol.rs  mcp_server.rs  memory.rs  nexus.rs  overwatch.rs  prompts.rs  rules.rs  sentinel.rs  skg_adapter.rs  skills.rs  state_store.rs  telemetry.rs  templates.rs  test_api.rs  test_grep.rs  test_json_stop.rs  test_regex.rs  test_types.rs  tool_rag.rs  tools.rs  tui.rs  turn_kit.rs  vector_brain.rs  wasm_engine.rs
src/skills/: api_server.rs  architecture_mapper.rs  bash_automation.rs  cron_scheduler.rs  debug_rust.rs  dns_setup.rs  docker_deploy.rs  git_workflow.rs  launchd_service.rs  migration_master.rs  mod.rs  network_scanner.rs  python_script.rs  rust_project_setup.rs  security_auditor.rs  server_hardening.rs  system_diagnostics.rs  systemd_service.rs  task_complete.rs  test_scaffolder.rs  unit_testing.rs  web_scraper.rs
src/tools/: agent_ops.rs  ast.rs  atlas.rs  csv.rs  database.rs  developer.rs  editing.rs  execution.rs  file.rs  git.rs  knowledge.rs  memory.rs  mod.rs  network.rs  network_manager.rs  privilege.rs  process.rs  rust.rs  search.rs  service_manager.rs  skg_adapter.rs  skg_demo.rs  skg_file.rs  skg_test.rs  system.rs  telemetry.rs  terminal.rs  threat_scanner.rs  utilities.rs  visualization.rs  wasm_sandbox.rs  web.rs
src/tools/boilerplate_backup/: skg_file.rs  skg_test.rs
src/tools/skg_tools/: agent_ops.rs  ast.rs  atlas.rs  csv.rs  database.rs  demo.rs  developer.rs  echo.rs  editing.rs  execution.rs  file.rs  git.rs  knowledge.rs  memory.rs  mod.rs  network.rs  network_manager.rs  privilege.rs  process.rs  rust.rs  search.rs  service_manager.rs  system.rs  telemetry.rs  terminal.rs  threat_scanner.rs  utilities.rs  visualization.rs  wasm_sandbox.rs  web.rs
src/~/Labs/: hello_7empest.sh
tempest-wasm/: Cargo.toml
tempest-wasm/src/: lib.rs  shader.wgsl
tempest-web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  style.css  test_ws.cjs  tsconfig.json  vite.config.ts
tempest-web/src/: App.tsx  main.ts  main.tsx  store.ts  style.css
tempest-web/src/components/: AgentTimeline.tsx  AskUserModal.tsx  ChatInterface.tsx  CodeEditor.tsx  CodeSearch.tsx  CommandPalette.tsx  FileExplorer.tsx  MissionControl.tsx  SafeModeModal.tsx  SettingsPanel.tsx  TerminalPanel.tsx  TurnReviewModal.tsx
tempest-web/src/hooks/: useNexusSocket.ts
tempest-web/src/types/: FileItem.ts  NexusRequest.ts  NexusResponse.ts  SearchMatch.ts  WebChatMessage.ts  WebFileDiff.ts  WebMemoryItem.ts  WebToolCallResult.ts
tempest-web/src/utils/: audio.ts
tests/: diagnostic_kalosm_memory.sh  test_agent_state.rs  test_arborium.rs  test_brace_counting.rs  test_brace_counting_full  test_brace_counting_full.rs  test_cargo_tools.rs  test_context_manager.rs  test_csv_tool.rs  test_file_tools.rs  test_json_parse.py  test_json_parse.rs  test_json_serde.rs  test_json_stop  test_multi_edit.rs  test_repair.rs  test_tempest_monitor.rs  test_verification_hooks.rs
tests/py_tests/: test_gemini_tools.py  test_repair.py
vscode-tempest/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-tempest/src/: extension.ts
vscode-tempest/src/types/: tempest.ts
vscode-tempest/src/utils/: tempestBridge.ts
