[package]
name = "tempest_ai"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
tempest-monitor = { version = "0.3.7", default-features = false }
tokio = { version = "1.0", features = ["full"] }
ollama-rs = { version = "0.3.4", features = ["stream", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
scraper = "0.20"
html2text = "0.12"
urlencoding = "2.1"
shellexpand = "3.1.2"
rand = "0.9"
sysinfo = "0.38.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
notify = "8.2.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
indicatif = "0.17"
termimad = "0.31"
syntect = "5.2"
regex = "1.11"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
arboard = "3.4"
plotters = "0.3.7"
sysctl = "0.7.1"
nix = { version = "0.31", features = ["user"] }
pnet = "0.35.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
rustyline = "15.0.0"
include_dir = "0.7"
walkdir = "2.5"
similar = "2.6"
schemars = "1.2.1"
miette = { version = "7.5", features = ["fancy"] }
color-eyre = "0.6"
parking_lot = "0.12"
dashmap = "6.1"
dyn-clone = "1.0"
rig-core = "0.36.0"
tool-parser = "1.2.0"
llm-extract = "0.1.0"
llm-extract-derive = "0.1.0"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
evalexpr = "11.0"
unicode-width = "0.2"
tiktoken = "3.1.2"
fuzzy-matcher = "0.3.7"
streaming-iterator = "0.1"
arborium = { version = "2.16.0", default-features = false, features = [
  "lang-rust", "lang-go", "lang-yaml", "lang-python", "lang-javascript", "lang-typescript",
  "lang-tsx", "lang-java", "lang-cpp", "lang-bash", "lang-c-sharp", "lang-html", "lang-css",
  "lang-c", "lang-json", "lang-hcl", "lang-lua", "lang-ruby", "lang-php", "lang-toml",
  "lang-swift", "lang-kotlin", "lang-scala", "lang-powershell", "lang-elixir", "lang-sql",
  "lang-starlark", "lang-objc", "lang-xml", "lang-vue", "lang-dockerfile"
] }
ai = { version = "0.2.16", features = ["ollama_client", "openai_client"] }
web-sys = { version = "0.3.69", features = [
  "Blob",
  "Clipboard",
  "ClipboardEvent",
  "ClipboardItem",
  "CompositionEvent",
  "Document",
  "DataTransfer",
  "Event",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "InputEvent",
  "Navigator",
  "MediaQueryList",
  "Window",
  "Notification",
  "NotificationPermission",
] }
wgpu = { version = "29.0.1", default-features = false, features = [
  "dx12",
  "gles",
  "metal",
  "parking_lot",
  "std",
  "vulkan",
  "wgsl",
] }

[target.'cfg(target_os = "macos")'.dependencies]
mlx-rs = { version = "0.25.3", features = ["metal", "accelerate"] }
mlx-macros = "0.25.3"
mistralrs = { version = "0.8.1", features = ["metal", "accelerate"] }
candle-core = { version = "0.10.2" }

[build-dependencies]
chrono = "0.4"
[dev-dependencies]
tokio-console = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
tempfile = "3.0"
[profile.release]
debug = true
[profile.bench]
debug = true

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.12.0"
procfs = "0.18.0"
