[package]
name = "tempest_ai"
version = "0.3.7"
edition = "2024"
default-run = "tempest_ai"
rust-version = "1.95"
license = "BSL-1.0"
authors = ["7empest462"]

[dependencies]
tempest-monitor = { version = "0.4.9", default-features = false }
tokio = { version = "1.52.3", features = ["full", "tracing"] }
console-subscriber = { version = "0.5.0", optional = true }
ollama-rs = { version = "0.3.5", features = ["stream", "macros", "tool-implementations"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
portable-pty = "0.9.0"
anyhow = "1.0.102"
colored = "3.1.1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1.89"
async-stream = "0.3.6"
scraper = "0.27"
html2text = "0.17.1"
urlencoding = "2.1"
url = "2.5"
shellexpand = "3.1.2"
rand = "0.10.1"
sysinfo = "0.39.5"
sha2 = "0.11.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
notify = "8.2.0"
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0"
minijinja = { version = "2.21.0", features = ["loader", "json"] }
csv = "1.4.0"
ractor = "0.15.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "now", "serde", "wasmbind", "std"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
syntect = "5.3"
regex = "1.12.3"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.32"
arboard = "3.6.1"
plotters = "0.3.7"
ratatui = "0.30.1"
crossterm = "0.29.0"
tui-markdown = "0.3.7"
rustyline = "18.0.0"
include_dir = "0.7"
walkdir = "2.5"
ignore = "0.4.26"
similar = "3.1.1"
schemars = "1.2.1"
miette = { version = "7.6", features = ["fancy"] }
parking_lot = "0.12.5"
dashmap = "6.2.1"
tool-parser = "1.3.1"
llm-extract = "0.1.0"
llm-extract-derive = "0.1.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.18.3"
evalexpr = "13.1.0"
unicode-width = "0.2.2"
tiktoken = "3.5.1"
fuzzy-matcher = "0.3.7"
streaming-iterator = "0.1.9"
arborium = { version = "2.18.1", default-features = false, features = [
  "lang-rust", "lang-go", "lang-yaml", "lang-python", "lang-javascript", "lang-typescript",
  "lang-tsx", "lang-java", "lang-cpp", "lang-bash", "lang-c-sharp", "lang-html", "lang-css",
  "lang-c", "lang-json", "lang-hcl", "lang-lua", "lang-ruby", "lang-php", "lang-toml",
  "lang-swift", "lang-kotlin", "lang-scala", "lang-powershell", "lang-elixir", "lang-sql",
  "lang-starlark", "lang-objc", "lang-xml", "lang-vue", "lang-dockerfile", "lang-zig", "lang-zsh",
  "lang-ssh-config", "lang-markdown", "lang-cmake", "lang-fish", "lang-asm"
] }
skg-tool = { version = "0.4.1", features = ["macros"] }
layer0 = "0.4.1"
skg-state-memory = "0.4.1"
skg-context = "0.4.1"
web-sys = { version = "0.3.102", features = [
  "Blob",
  "Clipboard",
  "ClipboardEvent",
  "ClipboardItem",
  "CompositionEvent",
  "Document",
  "DataTransfer",
  "Event",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "InputEvent",
  "Navigator",
  "MediaQueryList",
  "Window",
  "Notification",
  "NotificationPermission",
] }
wgpu = { version = "29.0.1", default-features = false, features = [
  "dx12",
  "gles",
  "metal",
  "parking_lot",
  "std",
  "webgpu",
  "vulkan",
  "wgsl",
] }
ratatui-textarea = "0.9.2"
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.7.0", features = ["fs", "cors"] }
mime_guess = "2.0.5"
skg-context-engine = "0.4.1"
skg-turn = "0.4.1"
skg-tool-macro = "0.4.1"
wasmtime = "46.0.0"
rat-markdown = "0.7.3"
rat-focus = "2.1.1"
rat-event = "2.1.0"
rat-menu = "3.1.1"
rat-text = "3.1.0"
rayon = "1.12.0"
kalosm = { version = "0.4.0", features = ["language"] }
kalosm-sound = { version = "0.4.0" }
grep = "0.4.1"
ts-rs = { version = "12.0.1", features = ["chrono", "uuid"] }


[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { version = "0.8.1", features = ["metal", "accelerate"] }
candle-core = { version = "0.10.2" }

[build-dependencies]
chrono = "0.4"
[dev-dependencies]
tokio-console = "0.1.10"
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
tempfile = "3.27.0"
tokio-test = "0.4.5"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.12.1"
procfs = "0.18.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }

[[bin]]
name = "test_regex"
path = "src/bin/test_regex.rs"

[[bin]]
name = "test_context_compaction"
path = "src/bin/test_context_compaction.rs"

[[bin]]
name = "test_tool_rag"
path = "src/bin/test_tool_rag.rs"

[[bin]]
name = "test_coordinator_agent"
path = "src/bin/test_coordinator_agent.rs"

[features]
console = ["dep:console-subscriber"]

[[bench]]
name = "tool_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
debug-assertions = false
debug = false
overflow-checks = false
rpath = false

[profile.dev]
opt-level = 1                  # Light optimization (good balance)
debug = true                   # Full debug info
split-debuginfo = "unpacked"   # Better debugging on macOS
overflow-checks = true         # Catch bugs during development
incremental = true             # Faster incremental compile

[profile.bench]
debug = true
