[package]
name = "tempest-wasm"
version = "0.3.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "Gpu",
  "GpuAdapter",
  "GpuCanvasContext",
  "GpuDevice",
  "GpuQueue",
  "Navigator",
]

[dependencies.wgpu]
version = "22.1.0"
features = ["webgpu", "webgl"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
