[package]
name = "tempest-wasm"
version = "0.3.7"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.125"
console_error_panic_hook = "0.1.7"
log = "0.4.32"
wasm-bindgen-futures = "0.4.75"
js-sys = "0.3.102"

[dependencies.web-sys]
version = "0.3.102"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "Gpu",
  "GpuAdapter",
  "GpuCanvasContext",
  "GpuDevice",
  "GpuQueue",
  "Navigator",
  "Performance",
]

[dependencies.wgpu]
version = "29.0.3"
features = ["webgpu", "webgl"]

[dev-dependencies]
wasm-bindgen-test = "0.3.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug-assertions = false
debug = false
overflow-checks = false
rpath = false
